全体を中央寄せに変更し、テーブルの入れ子構造を廃止

--- a/index.html
+++ b/index.html
@@ -17,185 +17,170 @@
 	<button type="button" name="send_btn" onclick="generate();">関連語検索</button>
 	</p>
 
-	<table id="mandalart" class="out" cellspacing="0" cellpadding="0">
-		<tr>
-			<td >
-				<table id="0" class="in">
-					<tr>
-						<td ></td>
-						<td ></td>
-						<td ></td>
-					</tr>
-					<tr>
-						<td ></td>
-						<td ></td>
-						<td ></td>
-					</tr>
-					<tr>
-						<td ></td>
-						<td ></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>	
-			<td>
-				<table id="1" class="in">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>
-			<td>
-				<table id="2" class="in">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<table id="3" class="in">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>	
-			<td>
-				<table id="4" class="in">
-					<tr>
-						<td ></td>
-						<td ></td>
-						<td ></td>
-					</tr>
-					<tr>
-						<td ></td>
-						<td ></td>
-						<td ></td>
-					</tr>
-					<tr>
-						<td ></td>
-						<td ></td>
-						<td ></td>
-					</tr>
-				</table>
-			</td>
-			<td>
-				<table id="5" class="in">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<table id="6" class="in">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>	
-			<td>
-				<table id="7" class="in">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>
-			<td>
-				<table id="8" class="in">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-			</td>
-		</tr>
+	<div>
+	<table align="left" id="0">
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
 	</table>
+
+	<table align="left" id="1">
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	<table id="2">
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	<table align="left" id="3">
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	<table align="left" id="4">
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	<table id="5"> 
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	<table align="left" id="6">
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	<table align="left" id="7"> 
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	<table id="8">
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	  <tr>
+	  	<td ></td>
+	  	<td ></td>
+	  	<td ></td>
+	  </tr>
+	</table>
+
+	</div>
 
 </body>
 
